Gtk-3.20&3.22: [Budgie-Desktop] Fix missing 'fucused' state inside the main-menu
When navigating items with up/down key-strokes, item-label was invisible.

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -212,11 +212,14 @@ $orientation: ((top, bottom),
       image { padding: rem(5.3px) 0 rem(6.7px); }
     }
     &:hover,
-    &.activatable:hover {
+    &.activatable:hover,
+    &:selected,
+    &.activatable:selected {
       background-image: none;
       background-color: $secondary_base_color;
-      color: $fg_color;
       transition: none;
+
+      &, & label { color: $fg_color; }
     }
   }
 
